--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 <!--------------------------------------------------------- Settings panel ----------------------------------------------------------!-->
 <div id="settingsPanel" class="invisible">
     <div class="settingsHeader">
-        <h2>Settings</h2>
+        <h2>设置</h2>
         <button onclick="$('.windowSettings button').click();">&times;</button>
     </div>
     <table class="settingsControls">
         <tr>
-            <td class="controlTitle">Remember my account informations</td>
+            <td class="controlTitle">记住账号信息</td>
             <td>
                 <ul class="choice-list" id="list_1">
                     <li class="checkbox check"
@@ -70,7 +70,7 @@
             </td>
         </tr>
         <tr>
-            <td class="controlTitle">Log in automatically when application starts</td>
+            <td class="controlTitle">自动登录</td>
             <td>
                 <ul class="choice-list" id="list_2">
                     <li class="checkbox check" onclick="if(!$('#list_1 .check').hasClass('is-checked')) {
