--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div>
         <div class="login-page">
             <button id="closeAccountModal" onclick="initData();
-                                                    $('#accountModal').attr('data-visible','false');"
+                                                    if($('#iCtlUrl')) $('#accountModal').attr('data-visible','false');"
                                                 >&times;
             </button>
             <div class="form">
