--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     <div class="windowSettings">
         <button class="fa fa-bars" aria-hidden="true" onclick="toggled = !toggled;
                                                                        if(!toggled)
-                                                                        $('#settingsPanel').removeClass('animated slideInLeft').addClass('animated slideOutLeft');
+                                                                        $('#settingsPanel').removeClass('animated fadeIn').addClass('animated fadeOut');
                                                                        else
-                                                                        $('#settingsPanel').removeClass('animated slideOutLeft invisible').addClass('animated slideInLeft');"></button>
+                                                                        $('#settingsPanel').removeClass('animated fadeOut invisible').addClass('animated fadeIn');"></button>
     </div>
 </div>
 
