--- a/bubble.html
+++ b/bubble.html
@@ -22,7 +22,7 @@
     <div id="main">
         <div id="mainContent">
             <button class="fa">
-                <a class="drag-element"><img src="images/税帐同步机器人.png"></a>
+                <a class="drag-element"><img src="images/robot.png"></a>
             </button>
             <div id="messageBadge" class="badge"></div>
         </div>
@@ -75,7 +75,7 @@
 			let myNotification = new Notification('RPA消息', {
 				body: '通知消息正文：对账任务，请处理。',
 				title:"Hello",
-				icon:'./images/税帐同步机器人.png',
+				icon:'./images/robot.png',
 				// To prevent sound
 				//silent:true,
 			});
