--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     }
 
     async function closeAccount() {
-		await initData();
+		// await initData();
 		if($('#iCtlUrl').val()) $('#accountModal').attr('data-visible','false');
 	}
 
